fix icons not showing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,7 +143,7 @@ a:hover {
 	text-rendering: auto;
 	line-height: 1;
 	text-transform: none !important;
-	font-family: 'Font Awesome 5 Pro';
+	font-family: 'Font Awesome 6 Pro';
 	font-weight: 400;
 }
 
@@ -156,7 +156,7 @@ a:hover {
 }
 
 .icon.brands:before {
-	font-family: 'Font Awesome 5 Brands';
+	font-family: 'Font Awesome 6 Brands';
 }
 
 /* Wrapper */
